derive/tests/ui/multiple-rpc-attributes.stderr
error: Expected only a single rpc attribute per method
 --> $DIR/multiple-rpc-attributes.rs:5:2
  |
5 |       /// Returns a protocol version
  |  _____^
6 | |     #[rpc(name = "protocolVersion")]
7 | |     #[rpc(name = "protocolVersionAgain")]
8 | |     fn protocol_version(&self) -> Result<String>;
  | |_________________________________________________^
